First z-index bugs

--- a/packages/not-alone-ui/src/not-alone/artemia/artemia.scss
+++ b/packages/not-alone-ui/src/not-alone/artemia/artemia.scss
@@ -31,6 +31,7 @@
 
   .drop-info {
     position: absolute;
+    z-index: 5;
     border-radius: inherit;
     left: 0;
     right: 0;
